fix: issue with CSS covering code

--- a/src/components/dev-popover/style.module.css
+++ b/src/components/dev-popover/style.module.css
@@ -9,6 +9,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  width: 100%;
   border: none;
   color: inherit;
   cursor: pointer;
